    bound) from upstream master branch. Fixes random GPU hangs on
    radeonsi (AMD Southern Islands and newer) in many games.
  * Bump debhelper compat to 10.
  * Stop passing --disable-silent-rules to configure, debhelper does
    that for a while.
  * Drop no longer needed dpkg-dev versioned build-dependency.
  * Drop redundant cross-build detection, debhelper does this for us
    already.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Thu, 15 Dec 2016 12:36:12 +0100

mesa (13.0.2-1) unstable; urgency=medium

  * New upstream release.
  * workaround-binutils-mips-844357.diff: Add workaround for broken
    binutils on mips*. Fixes invalid symbol table of libGL.so.1. See
    also Bug #844357.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Tue, 29 Nov 2016 16:29:00 +0100

mesa (13.0.1-2) unstable; urgency=medium

  * Cherry-pick commit 1809f17 (mesa: Drop PATH_MAX usage.) from
    upstream 13.0 branch. Should fix FTBFS on hurd (Closes: #843588).
  * Enable extra HUD support for showing I/O stats of block/NIC devices.
  * Enable HUD lmsensors support.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Mon, 28 Nov 2016 13:32:31 +0100

mesa (13.0.1-1) experimental; urgency=medium

  * New upstream release.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Mon, 14 Nov 2016 16:23:42 +0100

mesa (13.0.0-1) experimental; urgency=medium

  * New upstream release.
  * Make mesa-vulkan-drivers.install more generic. Should fix FTBFS on
    some arches.
  * rules: Remove superfluous linux check.
  * rules: Remove vulkan_intel.h only where it get installed in tmp.
    Should fix FTBFS on some more arches.
  * source/local-options: Update extend-diff-ignore.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Wed, 02 Nov 2016 11:49:13 +0100

mesa (13.0.0~rc2-1) experimental; urgency=medium

  * New upstream release candidate.
  * control, rules: Use llvm/clang 3.9 (Closes: #836913).
  * control: Bump libclc dependencies.
  * Bump libdrm-dev build-dep to 2.4.69 per configure.ac.