@@ -104,6 +104,12 @@ else
 	confflags_GALLIUM += --enable-lmsensors
 endif
 
+# Disable assembly usage on x32 otherwise Mesa defaults to x86_64 assembly
+# which doesn't work on x32 (see #758094)
+ifneq (,$(filter $(DEB_HOST_ARCH), x32))
+	confflags += disable-asm
+endif
+
 confflags_EGL = --with-egl-platforms="$(EGL_DISPLAYS)"
 confflags_GLES = --enable-gles1 --enable-gles2
 confflags_GALLIUM += --with-gallium-drivers="$(GALLIUM_DRIVERS)"
