@@ -11,6 +11,7 @@ mesa (13.0.2-2) UNRELEASED; urgency=medium
   * Drop no longer needed dpkg-dev versioned build-dependency.
   * Drop redundant cross-build detection, debhelper does this for us
     already.
+  * Disable assembly usage on x32. Related to Bug #758094.
 
  -- Andreas Boll <andreas.boll.dev@gmail.com>  Thu, 15 Dec 2016 12:36:12 +0100
 
